...
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".pcls.PclsCalcFragment">

      <Button
        android:id="@+id/calculate_pcls_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/pension" />

          <com.cottacush.android.currencyedittext.CurrencyEditText
            android:id="@+id/pension_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pension_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/commutation_factor" />

          <EditText
            android:id="@+id/commutation_factor_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/commutation_factor_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/money_purchase_fund" />

          <com.cottacush.android.currencyedittext.CurrencyEditText
            android:id="@+id/dc_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dc_fund_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
...

        </TableRow>

      </TableLayout>

      <TableLayout
        android:id="@+id/opt1_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/opt1b_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning"
        tools:visibility="visible">

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/opt1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/opt1_description"
            android:textAlignment="center" />

        </TableRow>

        <TableRow
          android:id="@+id/opt1_cmb_pcls"
...
          tools:layout_editor_absoluteX="68dp"
          tools:layout_editor_absoluteY="147dp" />

      </LinearLayout>

      <TableLayout
        android:id="@+id/opt2_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/opt3_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opt1b_table"
        tools:visibility="visible">

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/opt2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/opt2_description"
            android:textAlignment="center" />

        </TableRow>

        <TableRow
          android:id="@+id/opt2_db_pcls"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/money_purchase_fund2" />

          <TextView
            android:id="@+id/db_dc_result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:text="@{String.valueOf(pclsCalcViewModel.dbBenOutput.dcFund)}"
            tools:text="£15,000.00" />
...

        <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/opt3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/opt3_description"
            android:textAlignment="center" />

        </TableRow>

        <TableRow
          android:id="@+id/opt3_np_pension"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/money_purchase_fund2" />

          <TextView
            android:id="@+id/np_dc_result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:text="@{String.valueOf(pclsCalcViewModel.noPclsBenOutput.dcFund)}"
            tools:text="£15,000.00" />
...
