...
  <string name="inflation_data_refreshed">Inflation data refreshed!</string>
  <string name="plutus">Plutus</string>
  <string name="about">About</string>
  <string name="opt1_description">Option 1</string>
  <string name="opt2_description">Option 2</string>
  <string name="opt3_description">Option 3</string>
  <string name="opt1a_description">Option 1A</string>
  <string name="opt1b_description">Option 1B</string>
  <string name="cpi">CPI</string>
  <string name="year">Year</string>
  <string name="month">Month</string>
  <string name="value">Value</string>
  <string name="about_text">
...
